--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-31 22:26:58
+lastsearch = 2024-08-01 01:34:53
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/voi-mini
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVUInK2H&sig=ACfU3U3RkcLmlwiOfnJToaRdl5nHntlRtQ&hl=en&sa=X&ved=2ahUKEwi00pG_stGHAxVqMjQIHVuyANMQ6AF6BAgZEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVUKlK4C&sig=ACfU3U3D3wkuKsgiECfFHyhS-Bt9PDTBtw&hl=en&sa=X&ved=2ahUKEwish53N9dGHAxWHGVkFHV3oFwsQ6AF6BAgVEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
