--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-31 23:47:58
+lastsearch = 2024-08-01 01:34:13
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -17,9 +17,9 @@ title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
 url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
-match = -7.1%%
-title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
-url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
+match = -21.4%%
+title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
 match = -32.1%%
