--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-01 00:38:33
+lastsearch = 2024-08-01 01:40:43
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -70.6%%
-title = ATEEZ Members Profile (Updated!)
-url = https://kprofiles.com/ateez-members-profile/
+match = -76.5%%
+title = xikers Members Profile (Updated!)
+url = https://kprofiles.com/xikers-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -176.5%%
-title = Malaysian Society of Gastroenterology and Hepatology ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9303255/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
 match = -11.8%%
@@ -47,9 +47,9 @@ title = Chan's Song
 url = https://www.youtube.com/watch?v=sx07d0FcFDo
 
 [www.tiktok.com]
-match = 0.0%%
-title = This song 😫💔#chan🎵🎶🎧 | this song
-url = https://www.tiktok.com/@channnmusicc/video/7204044061546794267
+match = 37.5%%
+title = Rayan Video Song
+url = https://www.tiktok.com/discover/rayan-video-song
 
 [www.psl.noaa.gov]
 match = -194.1%%
