--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-31 23:46:16
+lastsearch = 2024-08-01 01:39:02
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -21.7%%
 title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOoosLuHJCDxTAayjFKZwTjBR0FlgWFK_iRYc0h2eOw7gu3DSdP4p
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -22,14 +22,14 @@ title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
-url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [www.lazada.vn]
 match = 21.7%%
 title = Chiếu cao bằng Việt Nam 1.2 X 1.95
-url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2&srsltid=AfmBOoq8kBDZC_HLaH82vGRHOpnpu_um1eEUw0UNccz3lnYu6T3CLs-m
+url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2
 
 [chieu.com.vn]
 match = -4.3%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopWsHoAjQwpswUSKUi0rYswrVBAuyksTYNb2rh9UJyh3V79rgwW
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
