--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-01 00:55:31
+lastsearch = 2024-08-01 01:35:17
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopVpm5ebe4WwjmOFGYn0J8IpXE7Wj2Uu5PHeOkd93Ie5lepX2LC
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [www.htlight.vn]
 match = -26.7%%
