--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-31 20:25:34
+lastsearch = 2024-08-01 01:43:08
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 09
 url = https://www.diepxuan.com/chieu-lac-d2-09.html
 
 [lacdau.com]
-match = -26.7%%
-title = LOA SADA D209 RGB TRẮNG
-url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-trang
+match = -13.3%%
+title = LOA SADA D209 RGB ĐEN
+url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
 
 [batdongsan.com.vn]
 match = -140.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/?locale=af_ZA
+match = -226.7%%
+title = Giao Lưu Livestream Chiều 18.07 | PURA BILLIARDS - Giao ...
+url = https://www.facebook.com/purabilliards/videos/giao-lưu-livestream-chiều-1807/1207721590543543/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -402,9 +402,9 @@ title = TÂY AN - KHAI PHONG - LẠC DƯƠNG
 url = https://tsttourist.com/vn/tay-an-khai-phong-lac-du-TSTOBCN31-TSTOBCN31-13092024-VJ.html
 
 [saca.com.vn]
-match = -133.3%%
-title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN ...
-url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips.html
+match = -166.7%%
+title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN CÔNG ...
+url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-cong-ty-dien-quang-thong-minh-dqsmart-tai-tro-luckydraw-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips.html
 
 [vpcqcsdt.bocongan.gov.vn]
 match = -40.0%%
