--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-01 00:45:45
+lastsearch = 2024-08-01 01:38:22
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -67,9 +67,9 @@ title = Pallet Nhựa giá rẻ tại Hà Nội, Các địa chỉ mua bán ...
 url = https://xenanghanoi.com/pallet-nhua-cu-sieu-tai-644120.html
 
 [m.facebook.com]
-match = -165.0%%
-title = Túi Niêm Phong, Túi Gói Hàng & Giấy In Nhiệt Giá Rẻ Tại Xưởng ...
-url = https://m.facebook.com/groups/hiephoibaobivietnam/posts/7482950015093461/
+match = -70.0%%
+title = Chợ Quê An Thượng | CHIẾU NHỰA BỀN ĐẸP - GIÁ SỐC
+url = https://m.facebook.com/groups/891057061359490/posts/1942038809594638/
 
 [muathongminh.vn]
 match = 82.4%%
