--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-01 00:56:35
+lastsearch = 2024-08-01 01:42:26
 
 [shopee.vn]
 match = -12.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = 4.0%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+match = 40.0%%
+title = Màn Tự Bung đỉnh Vuông Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/man-tu-bung-dinh-vuong/
 
 [demxanh.com]
 match = 12.0%%
