--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-31 23:22:44
+lastsearch = 2024-08-01 01:37:00
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -64.0%%
 title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
-url = https://demxanh.com/?srsltid=AfmBOoqrb2gZX2LEhRJj8ci0Ivucigr7V_MHUlO1BmKAXRKxeh2W1-Yj
+url = https://demxanh.com/
 
 [khodem.vn]
 match = 8.0%%
@@ -112,9 +112,9 @@ title = Ruột gối - Everhome
 url = https://demeverhome.com/san-pham/ruot-goi/
 
 [thegioidemonline.com]
-match = 4.0%%
-title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html?srsltid=AfmBOoos_6anOkeE_iokt3wwfMyf0Xwr7ezBD8cAP_95bQ4qWiiHwt-L
+match = -56.0%%
+title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html
 
 [thegioidemdep.com]
 match = -24.0%%
