--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-31 20:39:28
+lastsearch = 2024-08-01 01:33:52
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOopNR4CXRimqvGe3chW0tyA-vRca35lebX7eLB5untUE_CGSs8uc
 
 [www.hotdeal.vn]
 match = -111.8%%
