CI images update

--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 29.6%%
 title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoo9s-9FWaCVDSsk3PhFrd2LUSoFuawNdsm8hKbGT5C_E-stQ75B
 
 [giasale.com]
 match = -59.3%%
