--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-31 19:37:43
+lastsearch = 2024-08-01 01:51:59
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 8.8%%
+title = Chiếu điều hoà và 2 vỏ gối Latex cao su non loại 1 sẵn hàng
+url = https://shopee.vn/Chiếu-điều-hoà-và-2-vỏ-gối-Latex-cao-su-non-loại-1-sẵn-hàng-i.16397825.1036019362
 
 [olbedding.com]
 match = 11.8%%
