--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-08-01 00:57:39
+lastsearch = 2024-08-01 01:47:04
 
 [www.youtube.com]
-match = -104.0%%
-title = Quick Tip: Testing For Real or Fake Diamonds using Diamond ...
-url = https://www.youtube.com/watch?v=DBq71whDU1g
+match = -88.0%%
+title = Diamond Selector II 2 Diamond tester testing review with ...
+url = https://www.youtube.com/watch?v=xuh30I17co8
 
 [www.diamonds.pro]
 match = 0.0%%
@@ -88,8 +88,8 @@ url = https://thebackshed.org/forum/ViewTopic_mobile.php?TID=8542&P=7
 
 [www.reddit.com]
 match = -12.0%%
-title = Tested Diamond but I bought Moissanite
-url = https://www.reddit.com/r/Moissanite/comments/1de2d9y/tested_diamond_but_i_bought_moissanite/
+title = Diamond tester recommendations???
+url = https://www.reddit.com/r/Diamonds/comments/17zlsxe/diamond_tester_recommendations/
 
 [www.tapeheads.net]
 match = -12.0%%
