--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-31 15:25:58
+lastsearch = 2024-08-01 01:45:47
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 7
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
 match = 23.8%%
