CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-31 18:26:30
+lastsearch = 2024-08-01 02:15:52
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = -12.5%%
+title = TTMS SORA gardens SC | Thu Dau Mot
+url = https://www.facebook.com/SORAgardensSC/
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -265,4 +265,9 @@ url = https://clipchamp.com/vi/blog/change-aspect-ratio-video/
 match = -50.0%%
 title = Hyundai Solati 16 chỗ - Bảng giá lăn bánh 2024
 url = https://hyundaidongnam.com.vn/Xe-khach-Hyundai/hyundai-solati-16-cho.html
+
+[tulieuvankien.dangcongsan.vn]
+match = -100.0%%
+title = Nghị quyết số 19-NQ/TW, ngày 16/6/2022, Hội nghị lần thứ ...
+url = https://tulieuvankien.dangcongsan.vn/he-thong-van-ban/van-ban-cua-dang/nghi-quyet-so-19-nqtw-ngay-1662022-hoi-nghi-lan-thu-nam-ban-chap-hanh-trung-uong-dang-khoa-xiii-ve-nong-nghiep-nong-dan-nong-8629
 
