--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-31 17:14:20
+lastsearch = 2024-08-01 02:16:36
 
 [eva.vn]
 match = -163.2%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = -100.0%%
+title = Linh sam siêu bông Sông Hinh, tím hồng, lá nhỏ M1
+url = https://mocnhienfarm.com/products/linh-sam-sieu-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -320,4 +320,9 @@ url = https://beegreen.vn/10-cay-noi-that-ua-bong-ram-hut-tai-loc/
 match = -42.1%%
 title = Những điều lưu ý khi trồng cây bòn bon
 url = http://dost-bentre.gov.vn/tin-tuc/640/nhung-dieu-luu-y-khi-trong-cay-bon-bon
+
+[nhathuoclongchau.com.vn]
+match = -115.8%%
+title = Phân biệt cây đại tướng quân và cây trinh nữ hoàng cung
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-phan-biet-cay-dai-tuong-quan-va-cay-trinh-nu-hoang-cung.html
 
