--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-01 00:25:35
+lastsearch = 2024-08-01 02:14:10
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.76356
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOoplo3x7f48eS8aDJgNDDGliARDnru7CgL0sTmotl5t4FAobFh2g
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOooYSng1TJBoAu_H1ZwAmbpBzNyXAj4W2bki8NJAZ7UKgUivvW3h
 
 [thuanloitrading.com]
 match = 10.0%%
