--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-31 23:17:13
+lastsearch = 2024-08-01 02:21:47
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmLFrl8&sig=ACfU3U39l8nWk4Dv0fc9zC8QBfzWnO5t8w&hl=en&sa=X&ved=2ahUKEwjPx77q1tGHAxX7kYkEHU2OEloQ6AF6BAgbEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmMGsic&sig=ACfU3U1I7DapHbKef3lfu722jkRYZx9a7g&hl=en&sa=X&ved=2ahUKEwiFufWKgNKHAxXoF1kFHbm6JMoQ6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
