CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-31 21:35:48
+lastsearch = 2024-08-01 02:34:57
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -257,9 +257,9 @@ title = Foreign Policy – the Global Magazine of News and Ideas
 url = https://foreignpolicy.com/
 
 [www.bbc.com]
-match = 0.0%%
-title = 
-url = https://www.bbc.com/news/world-asia-65142573
+match = 8.7%%
+title = South Korea country profile
+url = https://www.bbc.com/news/world-asia-pacific-15289563
 
 [history.army.mil]
 match = -117.4%%
@@ -415,4 +415,9 @@ url = https://www.reuters.com/world/asia-pacific/south-korea-says-19-citizens-he
 match = -5.6%%
 title = Wallingford School
 url = https://m.facebook.com/wallingford4140/?locale=hu_HU
+
+[twitter.com]
+match = -13.0%%
+title = Big Bad Bear (@BigBadBear_) / X
+url = https://twitter.com/bigbadbear_
 
