--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-31 20:44:45
+lastsearch = 2024-08-01 02:29:23
 
 [xoptraisan.info]
 match = 17.6%%
@@ -170,4 +170,19 @@ url = https://nyshistoricnewspapers.org/?a=d&d=eda18780513-01.1.3
 match = -100.0%%
 title = Name.pl
 url = https://ctan.math.washington.edu/tex-archive/systems/texlive/tlnet/tlpkg/tlperl/lib/unicore/Name.pl
+
+[ntrs.nasa.gov]
+match = -117.6%%
+title = National Aeronautics and Space Administration
+url = https://ntrs.nasa.gov/api/citations/19940019588/downloads/19940019588.pdf
+
+[pubs.acs.org]
+match = -205.9%%
+title = Highly Efficient Polymeric Carbon Nitride Photoanode with ...
+url = https://pubs.acs.org/doi/abs/10.1021/acs.nanolett.0c01484
+
+[core.ac.uk]
+match = -176.5%%
+title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
+url = https://core.ac.uk/download/pdf/154886317.pdf
 
