--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-01 00:57:17
+lastsearch = 2024-08-01 02:25:47
 
 [www.instagram.com]
-match = -246.2%%
-title = Yuki Chan (@yukichan_la) • Instagram photos and videos
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -333.3%%
-title = 3X1
-url = https://en.wikipedia.org/wiki/3X1
+match = -23.1%%
+title = First Indochina War
+url = https://en.wikipedia.org/wiki/First_Indochina_War
 
 [nursing.hku.hk]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
@@ -210,4 +210,9 @@ url = https://www.openrice.com/en/hongkong/p-yuki-house-ramen-p22165502
 match = 0.0%%
 title = Scholarships - PLKC
 url = https://www.plkc.edu.hk/centenarian/scholarships/
+
+[projectsekai.fandom.com]
+match = -169.2%%
+title = Hoshino Ichika | Project SEKAI Wiki | Fandom
+url = https://projectsekai.fandom.com/wiki/Hoshino_Ichika
 
