--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-31 22:23:34
+lastsearch = 2024-08-01 02:25:06
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -187,9 +187,9 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -39.3%%
-title = ĐỨC HÒA LONG AN | - E cần các chị nhận Tỏi về bóc ...
-url = https://m.facebook.com/groups/3612064075496936/posts/7805379876165314/
+match = -5.6%%
+title = TƯ VẤN Dh ĐÀI LOAN
+url = https://m.facebook.com/DOHIENDUHOC/?comment_id=Y29tbWVudDoxMTAyNzE0MjkzNTQzODk0XzExMDI3Mjc1MjAyMDkyMzg=
 
 [www.instagram.com]
 match = -64.3%%
@@ -310,4 +310,9 @@ url = https://www.taiwan-panorama.com/vi/Articles/Details?Guid=8fe4108f-61c9-4bd
 match = 12.5%%
 title = Sản Phẩm - Trà Ngon Việt
 url = https://trangonviet.com.vn/vi/san-pham.html&p=2
+
+[thanhnien.vn]
+match = 28.0%%
+title = Bị lột da 14 lần mỗi ngày
+url = https://thanhnien.vn/bi-lot-da-14-lan-moi-ngay-185151605.amp
 
