--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-31 22:53:54
+lastsearch = 2024-08-01 02:40:30
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -12,9 +12,9 @@ title = Chiếu cây HT 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -162,9 +162,9 @@ title = Mũi taro tay Yamawa HT M14x2 1.5P P3
 url = http://muitaro.com/mui-taro-tay-yamawa-ht-m14x2-1-5p-p3.html
 
 [tiki.vn]
-match = -166.7%%
-title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu tre
+match = -173.3%%
+title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc
 
 [hachi.com.vn]
 match = -173.3%%
