--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-31 21:59:01
+lastsearch = 2024-08-01 02:29:45
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = -25.0%%
+title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 21.4%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOor3lQafIxwtpQVzdtERRX5OKGivM_mpCDZCrk3AXU4xpA8wtPrI
 
 [tiki.vn]
 match = 28.6%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOor5vX79qyxaUWl6MK5vVI-3Q662EDMQsY-DGWvGvVY_grltM7gr
 
 [kyoryo.vn]
 match = -35.7%%
@@ -54,7 +54,7 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 [foreverbedding.net]
 match = 42.9%%
 title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoobIFfPjO4AzmvGsYYtWAJMuUSISsl1_bQOQOS0sGZyaz5PytvT
 
 [www.youtube.com]
 match = 14.3%%
