--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-31 23:29:37
+lastsearch = 2024-08-01 02:35:41
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -200.0%%
+title = My neighbor is constantly doing things that violate our HOA ...
+url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
 
 [www.hopb.co]
 match = -141.2%%
@@ -520,4 +520,9 @@ url = https://www.ralaw.com/media/insights/Community Association Law Alert/hb120
 match = -58.8%%
 title = Florida Governor Signs House Bill 1203
 url = https://www.siegfriedrivera.com/blog/florida-governor-signs-house-bills-1203-into-law/
+
+[pmblaw.org]
+match = -176.5%%
+title = Arizona HOA Statutes - phillips, maceyko & battock, pllc
+url = https://pmblaw.org/wp-content/uploads/2021/09/Statute-Book-2021-2022_Digital-1.pdf
 
