--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-31 21:36:47
+lastsearch = 2024-08-01 02:40:51
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -43,8 +43,8 @@ url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
 match = 36.2%%
