--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-01 00:20:20
+lastsearch = 2024-08-01 02:38:25
 
 [www.tiktok.com]
-match = -181.2%%
-title = use my discount code AYASCHANNEL1 on @YesStyle ...
-url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
+match = -112.5%%
+title = #lipgloss #beautytok @Huda @Huda Beauty
+url = https://www.tiktok.com/@hudabeauty/video/7344789654022950190
 
 [digitalmaine.com]
 match = -75.0%%
