--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-01 00:24:12
+lastsearch = 2024-08-01 02:37:02
 
 [gobearcats.com]
 match = -142.1%%
@@ -137,9 +137,9 @@ title = Gary Vilke - UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
-match = -110.5%%
-title = Larry Allen, MD Professor, Medicine-Cardiology
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
+match = -121.1%%
+title = Rubin Tuder, MD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -253,8 +253,8 @@ url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-s
 
 [profiles.ucsf.edu]
 match = 5.3%%
-title = Arun Wiita, MD, PhD
-url = https://profiles.ucsf.edu/arun.wiita
+title = Katherine Matthay, MD
+url = https://profiles.ucsf.edu/katherine.matthay
 
 [profiles.stanford.edu]
 match = -36.8%%
@@ -412,8 +412,8 @@ title = List-of-Successfully-Registered-Entities-and-Physicians
 url = https://www.dhcs.ca.gov/Documents/List-of-Successfully-Registered-Entities-and-Physicians.xlsx
 
 [profiles.sc-ctsi.org]
-match = -105.3%%
-title = Heinz-Josef Lenz - USC Health Sciences Profiles
+match = -47.4%%
+title = Heinz-Josef Lenz, MD - USC Profiles
 url = https://profiles.sc-ctsi.org/heinz-josef.lenz
 
 [www.prismaweb.org]
@@ -575,4 +575,9 @@ url = https://health.ucdavis.edu/cht/research/telehealthpub.html
 match = -42.1%%
 title = Publications - School of Medicine
 url = https://sites.medschool.ucsd.edu/research/inm/news-publications/Pages/Publications.aspx
+
+[ipsworks.org]
+match = -6.2%%
+title = Evidence for IPS
+url = https://ipsworks.org/index.php/evidence-for-ips/
 
