CI images update

--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-31 16:38:54
+lastsearch = 2024-08-01 03:13:08
 
 [demxanh.com]
 match = 34.5%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = -31.0%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [demchinhhang.com]
 match = -20.7%%
