--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-01 01:51:16
+lastsearch = 2024-08-01 04:01:08
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
-match = -45.8%%
-title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -54.2%%
+title = 16 Bộ Nệm Gối Cho Bé Đi Học Mẫu Giáo Giá Rẻ Tận Xưởng
+url = https://cuahangchangagoidem.com/bo-nem-goi-cho-be-di-hoc-mau-giao/
 
 [tiki.vn]
 match = 0.0%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -8.3%%
-title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html?srsltid=AfmBOopXAnmoUkvfS2MUhWwAC-aNUvcCIj4DSc5VfTSWK16UmYKE3cSD
+match = -25.0%%
+title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
+url = https://demxanh.com/chan-ga-goi-dem.html
 
 [changagoibenlinda.com]
 match = -12.5%%
