--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-31 20:20:01
+lastsearch = 2024-08-01 03:52:58
 
 [silverwow.net]
 match = -255.6%%
 title = Heaviest Mens Silver Necklaces Chains
-url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains?srsltid=AfmBOopUbQrW_Jl80iclQ8NAh0-2qiqjNMfY98pOqZI7JTBrmQc1PgoC
+url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains
 
 [www.whittingtonsteel.com]
 match = 37.5%%
