--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 02:21:47
+lastsearch = 2024-08-01 03:47:02
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmMGsic&sig=ACfU3U1I7DapHbKef3lfu722jkRYZx9a7g&hl=en&sa=X&ved=2ahUKEwiFufWKgNKHAxXoF1kFHbm6JMoQ6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmMLtk7&sig=ACfU3U1LK7B33Y5ERWEKZyVcBKlupR0YEw&hl=en&sa=X&ved=2ahUKEwjjr42Sk9KHAxWklYkEHZx0BrcQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
