--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-31 21:39:13
+lastsearch = 2024-08-01 03:48:08
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -22,9 +22,9 @@ title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
 url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
-match = -80.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ's post
-url = https://www.facebook.com/pyeoda.vn/posts/nệm-lò-xo-bảo-vệ-cột-sống-khỏe-an-vui-đón-tếtmỗi-sáng-thức-dậy-lưng-đau-tinh-thầ/898284118968513/
+match = -45.0%%
+title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
+url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [shopee.vn]
 match = -25.0%%
