--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-31 23:34:51
+lastsearch = 2024-08-01 03:43:59
 
 [www.cms.gov]
 match = 4.5%%
@@ -128,8 +128,8 @@ url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusine
 
 [www.ncbi.nlm.nih.gov]
 match = -118.2%%
-title = Wnt Signaling in Brain Tumors: A Challenging Therapeutic ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10215617/
+title = Protein acylation: mechanisms, biological functions and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
 
 [westsideobserver.com]
 match = -58.3%%
