--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-01 01:47:36
+lastsearch = 2024-08-01 03:53:19
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
@@ -42,8 +42,8 @@ title = Điệp Xuân Thảm giường nỉ 120x190
 url = https://www.diepxuan.com/tham-giuong-ni-120x190.html
 
 [shopee.vn]
-match = -81.8%%
-title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
+match = -54.5%%
+title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN ...
 url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [everonhanquoc.vn]
