--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-31 21:41:58
+lastsearch = 2024-08-01 03:47:47
 
 [shopee.vn]
 match = -76.2%%
@@ -54,7 +54,7 @@ url = https://lanhadecor.vn/san-pham/giuong-boc-nem-lnd-16/
 [ru9.vn]
 match = -81.0%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoriBdjwnj7U6LUGPxlu9q_6243nRUguPYmSRRRPEVHwrvhZ2oAn
 
 [edena.vn]
 match = -38.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOooImLwzsXfkUTvLxwufauguvkrPeM3w5PYU-gFcsobPV4sgMCwK
 
 [giuongxep.com]
 match = -57.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooJUa5b_CGNstMPdW8r-lZzmSqvpHX6sWsp40BfqpumpWVgAIVd
 
 [beyours.vn]
 match = 0.0%%
@@ -129,7 +129,7 @@ url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tun
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqI52r80Qs3xZupY9w5KRkGbU45rwN8gM0isBBFlpU4YvWTJg4j
 
 [danacity.com.vn]
 match = -42.9%%
