--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-01 02:36:02
+lastsearch = 2024-08-01 04:18:15
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = -131.2%%
+title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -193.8%%
-title = Trying the Viral Covergirl Lip Stains 🎀 YES GIRL ITS ...
-url = https://www.tiktok.com/@skinstadrea/video/7346309634728299822
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [archiveofourown.org]
 match = -137.5%%
