--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-31 23:46:06
+lastsearch = 2024-08-01 04:18:36
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 7.4%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [demhong.vn]
 match = 11.1%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOoqXZCYmiZ3ISUiQwAoJnYD4u9fvX8sVNwe36kvYnIAjJgxbTmWx
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOorcW_SKfPO8a4gRsUmFLm7CDCa5evXirfxPMjzv9LGm2JbRCtVq
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/search?keyword=chăn ga cotton
 [lynconcept.com]
 match = -25.9%%
 title = Bộ Chăn Ga Gối Cotton 100%% Hàn Quốc In Hình Hoa Nhỏ ...
-url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16
+url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16?srsltid=AfmBOorXzHsOBSU_e9zckr6yqR4l1qjPvXOmbcc5aQiRbRREVYWofDBa
 
 [changagoidemsonghong.online]
 match = -7.4%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -25.9%%
-title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
