--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-01 03:51:36
+lastsearch = 2024-08-01 04:16:26
 
 [www.facebook.com]
 match = -141.2%%
@@ -22,8 +22,8 @@ title = Chăn Mao Tân 4kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -194.1%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
+match = -176.5%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -164.7%%
-title = PharmGKB summary: sertraline pathway, pharmacokinetics
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7008964/
+match = -152.9%%
+title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
 
 [books.google.com]
 match = -7.7%%
