--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-01 03:45:39
+lastsearch = 2024-08-01 04:26:35
 
 [demxanh.com]
 match = 24.1%%
 title = Chiếu điều hòa cao su non đa sắc xám hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html?srsltid=AfmBOorOMlTyxKrR9QNPVsPkhb7H57tXVdIwIDigekXeOj0hNBzokIV5
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [leflair.com]
 match = 6.9%%
 title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
-url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379?srsltid=AfmBOoolhN694b1fLYypnJo9w9wR2okM1u9LDJu6nsWwcjBKaeoj7Mtc
+url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
 match = -17.2%%
 title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOopfbZ6MH5egOjFg2_5JRQCA73nun59VQsFjQFABgRDYel_FGDwV
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOorPflR37pPB8kjsl8kZoa43zrv9tdBXfeItYEpWoyrQNc97jsfd
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
 match = 10.3%%
