--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-01 01:50:20
+lastsearch = 2024-08-01 04:14:19
 
 [www.lazada.vn]
 match = -60.9%%
@@ -17,14 +17,14 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=uk_UA
 
 [www.sendo.vn]
-match = 34.8%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -8.7%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [shopee.vn]
-match = -78.3%%
-title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
-url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
+match = -39.1%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [trangvangvietnam.com]
 match = 21.7%%
