--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-31 22:13:55
+lastsearch = 2024-08-01 04:16:47
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = 69.2%%
+title = Đệm lò xo Everon Pocket Premium
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
 match = 61.5%%
 title = Điệp Xuân Nệm lò xo Everon Pocket 18
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html?srsltid=AfmBOoqXdUlEfaYzXx_Q6g76qAySBY7e5FVH0v7y2F5ojF58SfzYq7o7
 
 [everon.online]
 match = -26.9%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = 69.2%%
-title = Nệm lò xo túi Everon Pocket Pops
-url = https://nemhana.com/nem-lo-xo-tui-everon-pocket-pops/
+match = -53.8%%
+title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
+url = https://nemhana.com/nem-everon/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOoq9aYp0LypdZUThhHpw-DOTY9F2wCnjvV8NHjm-0X2hL75OEJ6D
 
 [demxanh.com]
 match = -19.2%%
