--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-31 21:47:47
+lastsearch = 2024-08-01 04:26:56
 
 [xoptraisan.info]
-match = -147.4%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
 match = -31.6%%
