--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 01:26:40
+lastsearch = 2024-08-01 04:27:57
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -350.0%%
+title = We take travel to new heights: TUI launches holiday trips ...
+url = https://www.linkedin.com/posts/tuigroup_we-take-travel-to-new-heights-tui-launches-activity-7180438234118643713-PVeJ
 
 [maritime-executive.com]
 match = -308.3%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -258.3%%
-title = TUI shares turn negative ahead of savings decisions
-url = https://www.reuters.com/article/world/tui-shares-turn-negative-ahead-of-savings-decisions-idUSL14490949/
+match = -216.7%%
+title = TUI AG says will not make offer for TUI Travel
+url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
 
 [www.mybaggage.com]
 match = -116.7%%
