--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-01 01:40:43
+lastsearch = 2024-08-01 04:27:34
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -94.1%%
+title = Epithelial sodium channel (ENaC) family
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4756657/
 
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWHMXtZg&sig=ACfU3U1lsIBTmNfpiJYk7Qlc_NWhcRun-Q&hl=en&sa=X&ved=2ahUKEwidrLfR-NGHAxV_F1kFHQt9IvsQ6AF6BAg-EAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWHNXo2d&sig=ACfU3U0fVZcRakfq0eZMUKFWOrGZKIpa6g&hl=en&sa=X&ved=2ahUKEwiSx-SZnNKHAxXjHzQIHTQsHEwQ6AF6BAgWEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chan's Song
 url = https://www.youtube.com/watch?v=sx07d0FcFDo
 
 [www.tiktok.com]
-match = 37.5%%
-title = Rayan Video Song
-url = https://www.tiktok.com/discover/rayan-video-song
+match = 0.0%%
+title = This song 😫💔#chan🎵🎶🎧 | this song
+url = https://www.tiktok.com/@channnmusicc/video/7204044061546794267
 
 [www.psl.noaa.gov]
 match = -194.1%%
