--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-01 02:25:06
+lastsearch = 2024-08-01 04:28:17
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
 match = 0.0%%
-title = Tìm kiếm từ khóa: nam
-url = https://dungcuykhoakimminh.com/tag/nam&trang-37
+title = Tìm kiếm từ khóa: ion
+url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 
 [mych.vn]
 match = -60.7%%
@@ -315,4 +315,9 @@ url = https://trangonviet.com.vn/vi/san-pham.html&p=2
 match = 28.0%%
 title = Bị lột da 14 lần mỗi ngày
 url = https://thanhnien.vn/bi-lot-da-14-lan-moi-ngay-185151605.amp
+
+[kenh14.vn]
+match = -39.3%%
+title = Xem cách người Thượng Hải ăn cua đặc sản của mùa này
+url = https://kenh14.vn/xem-cach-nguoi-thuong-hai-an-cua-dac-san-cua-mua-nay-an-xong-phai-xep-lai-y-nhu-ban-dau-20170921152044586.chn
 
