--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-31 17:45:38
+lastsearch = 2024-08-01 04:44:12
 
 [demxanh.com]
-match = 33.3%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = 43.5%%
+title = Chiếu điều hòa Nhật Bản
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -62,9 +62,9 @@ title = Chiếu điều hòa – Hiểu chuẩn để rút tiền đúng
 url = http://anhp.vn/chieu-dieu-hoa--hieu-chuan-de-rut-tien-dung-d18928.html
 
 [thegioinem.com]
-match = 16.7%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 0.0%%
