--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-31 20:33:31
+lastsearch = 2024-08-01 04:27:15
 
 [shopee.vn]
 match = -65.2%%
@@ -39,11 +39,11 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOoqOLyRk0CoCXqu-Pc_rSkE4Y3g5akVX3CFdeUnxCtr4i2NxRqtV
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
-match = -73.9%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chăn ga gối đệm
+match = -82.6%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chuyên Hàng Việt!
 url = https://chuyenhangviet.com/chieu-tre-viet-pho-men-thai-binh-cao-cap/
 
 [tiki.vn]
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOor27HkDTC2RrZzKZizjczrF9gfxQ1isocAAzgFsSxspZR3Y-YnQ
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
