--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-01 00:18:58
+lastsearch = 2024-08-01 04:35:13
 
 [dongagroup.vn]
 match = -272.7%%
@@ -57,9 +57,9 @@ title = Combo giường tủ 2m
 url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 
 [ifurni.vn]
-match = -18.2%%
-title = Giường bọc nệm JULIANA 2
-url = https://ifurni.vn/san-pham/giuong-boc-nem-juliana-2-2433.html
+match = 0.0%%
+title = Giường bọc nệm HELEN 2
+url = https://ifurni.vn/san-pham/giuong-boc-nem-helen-2-1564.html
 
 [shopee.vn]
 match = -263.6%%
