--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-01 03:59:25
+lastsearch = 2024-08-01 04:29:16
 
 [munghoangphat.com]
 match = -24.0%%
@@ -22,9 +22,9 @@ title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title =
 url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi
 
 [manthutrang.com]
-match = -52.0%%
-title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
-url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
+match = 16.0%%
+title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
+url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
 [easydream.vn]
 match = -40.0%%
