--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-01 03:53:38
+lastsearch = 2024-08-01 04:42:29
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -187,7 +187,7 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -135.3%%
-title = THẢM XỐP TRẢI SÀN - Xốp tranh giao thông Tường Lâm ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-tranh-giao-thông-tường-lâm-bịch-8-tấm-ghép-thành-2-hình-như-trên-mỗi/724213227684188/
+match = -129.4%%
+title = THẢM XỐP TRẢI SÀN - Xốp nỉ ghép kẻ Tường Lâm bịch ...
+url = https://m.facebook.com/xoplotsan/photos/xốp-nỉ-ghép-kẻ-tường-lâm-bịch-16-tấm-mỗi-tấm-kích-thước-50-x-50cm-kho/724212907684220/
 
