CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-01 02:20:05
+lastsearch = 2024-08-01 05:41:53
 
 [shopee.vn]
 match = 8.8%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 14.7%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooTEY9Lx2zLqKeuDX3c9vPx9HbBbT0Ue_w4EgmCapOgbCCJ4XZg
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -84,7 +84,7 @@ url = https://tiki.vn/search?q=chiếu điều hòa cao su non
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoquHlmedfh3kmCM9ikKG8IZedzylHCc2RA-Ha80BhwqQYRbE5nB
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [ru9.vn]
 match = 8.8%%
