--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-31 21:40:53
+lastsearch = 2024-08-01 05:31:33
 
 [www.youtube.com]
 match = -72.7%%
@@ -29,7 +29,7 @@ url = https://antv.gov.vn/the-gioi-7/dong-dat-tai-dai-loan-trung-quoc-so-nguoi-t
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOopEZSSK89Tvtipk9wag3mDoXRA7B8PecD_j1vm3fDILCNi-OMJf
 
 [www.roc-taiwan.org]
 match = -44.0%%
@@ -47,9 +47,9 @@ title = Tôn Giáo Học So Sánh - Page ii - Google Books Result
 url = https://books.google.com/books?id=FMfKEAAAQBAJ&pg=PR2-IA16&lpg=PR2-IA16&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=NSu-Jc7mak&sig=ACfU3U3UBII2N47UQpJNG_msE-W1KjyY-w&hl=en&sa=X&ved=2ahUKEwiBysDO5s2HAxXFIkQIHU8aAwQQ6AF6BAgWEAM
 
 [www.skyscanner.com.vn]
-match = -48.0%%
-title = Vé máy bay giá rẻ từ Vương quốc Anh đến Đài Loan
-url = https://www.skyscanner.com.vn/routes/uk/tw/vuong-quoc-anh-to-đai-loan.html
+match = -60.0%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [tienphong.vn]
 match = -36.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOorawJMM00f8WwjIha8HNfnCIcGcUAYeQo1gFHCbxaRg3NiN2c-l
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
