--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-01 02:34:57
+lastsearch = 2024-08-01 05:45:34
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = Emerging COVID-19 success story: South Korea learned ...
 url = https://ourworldindata.org/covid-exemplar-south-korea
 
 [www.cnn.com]
-match = -53.8%%
-title = Latest Videos
-url = https://www.cnn.com/videos
+match = -108.7%%
+title = Putin says Russia and North Korea will help each other if ...
+url = https://www.cnn.com/2024/06/19/asia/north-korea-russia-putin-visit-thursday-intl-hnk/index.html
 
 [cryptoslate.com]
 match = 8.7%%
@@ -420,4 +420,9 @@ url = https://m.facebook.com/wallingford4140/?locale=hu_HU
 match = -13.0%%
 title = Big Bad Bear (@BigBadBear_) / X
 url = https://twitter.com/bigbadbear_
+
+[apnews.com]
+match = -108.7%%
+title = South Korea considers giving arms to Ukraine after Russia ...
+url = https://apnews.com/article/north-korea-russia-kim-jong-un-putin-military-assistance-war-d9bb8aee7eb1a692b932337578fb3e30
 
