--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 01:47:14
+lastsearch = 2024-08-01 05:39:51
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -89.5%%
+title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
+url = https://www.youtube.com/watch?v=rDqH9asT7yA
 
 [kallos.co]
 match = -105.3%%
