--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-01 04:41:46
+lastsearch = 2024-08-01 05:40:33
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
 match = -190.9%%
@@ -132,9 +132,9 @@ title = Giường nệm xếp gọn kiểu dáng Hàn Quốc SUMIKA 339A, ...
 url = https://sumika.vn/giuong-nem-xep-gon-kieu-dang-han-quoc-sumika-339a-rong-90cm
 
 [thegioigiuonggap.com]
-match = -172.7%%
-title = Giường gấp nhập khẩu Nhật Bản (OTB-TRN)
-url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-trn/
+match = -72.7%%
+title = Giường gấp nhật bản (OTB-MN)
+url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-mn/
 
 [www.igea.com.vn]
 match = -300.0%%
