--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-01 04:41:27
+lastsearch = 2024-08-01 05:32:16
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -82,9 +82,9 @@ title = Reviews: On the Edge
 url = https://www.imdb.com/title/tt0091677/reviews
 
 [ultrasignup.com]
-match = -63.6%%
-title = Nick Wilson's Results
-url = https://ultrasignup.com/results_participant.aspx?fname=Nick&lname=Wilson
+match = -36.4%%
+title = Registration Hot List
+url = https://ultrasignup.com/hotlist.aspx
 
 [www.gs1.org]
 match = -18.2%%
