--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-01 01:19:20
+lastsearch = 2024-08-01 05:43:13
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -52,9 +52,9 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -68.2%%
-title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
-url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
+match = 50.0%%
+title = Tấm trải / Topper - K-Bedding
+url = https://kbedding.vn/danh-muc/nem/tam-trải-topper/
 
 [dailyeveron.vn]
 match = -45.5%%
