--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-01 02:27:16
+lastsearch = 2024-08-01 05:40:12
 
 [erado.vn]
 match = 5.0%%
 title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOoo7KJdzLYJuTBB_-AbmDhOI0ozmY-qy-bUpDA7XxSTtQxrTiaBx
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOopCxGURsqxaVAgf1rZ7LS6jxSh7n8nnKLDMFpBLtzLYGIHh2qGA
 
 [shopee.vn]
-match = -120.0%%
-title = Bộ ga gối trải giường, Bộ ga giường drap nệm, ga chun đủ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-Bộ-ga-giường-drap-nệm-ga-chun-đủ-mọi-kích-cỡ-1m2-1m4-1m6-1m8-2m-2m2-i.483546614.15837908133
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [noithatami.com]
 match = -75.0%%
@@ -169,7 +169,7 @@ url = https://dogohiephien.vn/giuong-go-dep/
 [noithatcaco.vn]
 match = -110.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOopUzBa11m24drMrwvDfiCZEE71yUMlmBDYc3tiyeaZq1AJaSoX1
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqoknLVdl5vKccqdhxvjTDVe65e9G0itb7YhQzFwNKdcYaZsbN1
 
 [noithatminhtan.com]
 match = 5.0%%
