--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-01 01:00:27
+lastsearch = 2024-08-01 05:41:11
 
 [bilystore.vn]
 match = -81.0%%
@@ -12,9 +12,9 @@ title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
-match = -85.7%%
-title = Khăn trải giường, đắp người LOẠI 1 siêu mềm, dày dặn ...
-url = https://shopee.vn/Khăn-trải-giường-đắp-người-LOẠI-1-siêu-mềm-dày-dặn-cho-spa-thẩm-mỹ-viện-kt-90*1m9-nặng-700GR-i.235726001.14824188007
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
@@ -152,9 +152,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -100.0%%
-title = 189+ Mẫu giường gỗ công nghiệp 1m4 đẹp, hiện đại, giá rẻ
-url = https://noithatcaco.vn/cam-nang-noi-that/giuong-go-cong-nghiep-1m4-830.html
+match = -95.2%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [dogohiephien.vn]
 match = -104.8%%
