CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-01 01:45:26
+lastsearch = 2024-08-01 06:25:59
 
 [shopee.vn]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://www.vinmec.com/vie/bai-viet/chieu-dai-xuong-mui-thai-nhi-12-tuan-b
 [books.google.com]
 match = -150.0%%
 title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
-url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-u6TP5Nr&sig=ACfU3U3c3YL7VEeTHUoPkQUdz9jG6dzhgw&hl=en&sa=X&ved=2ahUKEwj-1vn699GHAxW5MlkFHUhaG8AQ6AF6BAgmEAM
+url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-u6UW3Rl&sig=ACfU3U2ohZZQCblBxMbIxxprobX9mjjtDA&hl=en&sa=X&ved=2ahUKEwiLnu7VttKHAxUBCjQIHYu5J40Q6AF6BAgnEAM
 
 [baovinhlong.vn]
 match = -137.5%%
