--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-01 03:47:47
+lastsearch = 2024-08-01 06:21:51
 
 [shopee.vn]
-match = -76.2%%
-title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường loại 1
+match = -30.8%%
+title = ga tham em be
+url = https://shopee.vn/search?keyword=ga-chong-tham-ga-trai-giuong-tham-chong-tham-cho-em-be-16x2m-tang-khau-trang-mau-ngau-nhien/6709027127215517721/2642071820174507179/ 
 
 [www.lazada.vn]
 match = -100.0%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooJUa5b_CGNstMPdW8r-lZzmSqvpHX6sWsp40BfqpumpWVgAIVd
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
 
 [beyours.vn]
 match = 0.0%%
