--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-01 04:18:36
+lastsearch = 2024-08-01 06:18:17
 
 [changagoidemsonghong.com]
 match = 7.4%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOorcW_SKfPO8a4gRsUmFLm7CDCa5evXirfxPMjzv9LGm2JbRCtVq
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOoryAnNwi0JImuYn0RY34KtfZJD7j2UW1TdsbznkFG7jdXXQ8CtG
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -63,8 +63,8 @@ url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.htm
 
 [alnena.vn]
 match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1443
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1443
+title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
+url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
 
 [bedding.vn]
 match = 11.1%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -18.5%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -25.9%%
+title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
+url = https://elmichsleep.vn/chan-ga-goi
 
 [khodemgiagoc.com]
 match = -37.0%%
