--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-31 18:40:07
+lastsearch = 2024-08-01 06:16:10
 
 [www.diepxuan.com]
 match = -72.7%%
 title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html?srsltid=AfmBOooV56DOrcpgb-aA4yOD1AuPojhvpZ16ov1clydQgsJ1bWCTp-pu
 
 [shopee.vn]
 match = 13.6%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -50.0%%
 title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
+url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/?srsltid=AfmBOoqOqcYj4Ut-HXlEQs3j_872DneLk8qS0gcXziJZbQvbjkcv9vA9
 
 [www.instagram.com]
 match = 4.5%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -40.9%%
-title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
+match = -50.0%%
+title = Chiếu cao su non Coco bo chun màu xanh dương
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html?srsltid=AfmBOooy-pjzaIvW3uEuRlMGiOy8EKE_IMWZ1QcGuLr0HF8DBzyLpk7b
 
 [www.tiktok.com]
 match = -127.3%%
