--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-01 04:47:26
+lastsearch = 2024-08-01 06:17:11
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -97,9 +97,9 @@ title = Đồ Da (Ví Da, Túi Cặp Da, Thắt Lưng,.) - Sản Xuất và Bán
 url = https://www.yellowpages.vn/cls/141160/do-da-san-xuat-va-phan-phoi.html
 
 [dungcuykhoabinhminh.com]
-match = -57.1%%
-title = Hướng dẫn sử dụng đèn ánh sáng sinh học điều trị da 7 ...
-url = https://dungcuykhoabinhminh.com/huong-dan-su-dung-den-anh-sang-sinh-hoc-dieu-tri-da-7-mau-devoir-427.436.html
+match = -31.2%%
+title = Y Khoa Bình Minh
+url = https://dungcuykhoabinhminh.com/
 
 [stableprogram.org]
 match = 26.1%%
