--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-01 04:46:04
+lastsearch = 2024-08-01 06:28:23
 
 [vnexpress.net]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -81.0%%
-title = Cáp treo Vũng Tàu - đường lên tiên cảnh Hồ Mây Park
-url = https://haivan.com/diem-den/Vung-tau/cap-treo-vung-tau-duong-len-tien-canh-ho-may-park
+match = -85.7%%
+title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
 
 [lockernlock.vn]
 match = -71.4%%
