--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-01 05:36:25
+lastsearch = 2024-08-01 06:25:38
 
 [chieutrelanlan.com]
 match = -17.9%%
@@ -23,8 +23,8 @@ url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
 match = -3.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
+title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -47,9 +47,9 @@ title = Mua Chiếu trúc hạt Quế Lâm
 url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
 
 [www.sendo.vn]
-match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
+match = -7.1%%
+title = Chiếu Trúc Hạt Quế hàng loại 1 cao cấp 1m8, 2m2 - ct004
+url = https://www.sendo.vn/chieu-truc-hat-que-hang-loai-1-cao-cap-1m8-2m2-31922415.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400323_undefined_-1_cateLvl2_0_67_23_-1
 
 [chieutrucsaigon.com]
 match = 32.1%%
