--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-01 01:37:00
+lastsearch = 2024-08-01 06:19:21
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -64.0%%
-title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
-url = https://demxanh.com/
+match = -44.0%%
+title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
 
 [khodem.vn]
 match = 8.0%%
@@ -37,9 +37,9 @@ title = Ruột gối Sông Hồng - Ruột đơn | Ruột ôm | Ruột vuông
 url = https://lombom.com/ruot-goi-song-hong/
 
 [thegioidemviet.vn]
-match = -48.0%%
-title = Ruột Gối Ôm Sông Hồng Chính Hãng 100%% - Giảm tới 15%%
-url = https://thegioidemviet.vn/ruot-goi-om-song-hong/
+match = -44.0%%
+title = Ruột Chăn Bông Siêu Nhẹ Sông Hồng Classic [Loại Mỏng]
+url = https://thegioidemviet.vn/ruot-chan-song-hong-loai-mong/
 
 [cafef.vn]
 match = -88.0%%
