--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-01 05:31:14
+lastsearch = 2024-08-01 06:27:24
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOooxgh5n-ovilJWtjPB24M34YSRPN_Ba4J8L0af2lXGxsqvjorfr
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoqfbqvwOShISbFmgkFmxYxxTbO98CgcytedeLiY2wqztPp0FrQx
 
 [cafeland.vn]
 match = -109.1%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu
+url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOopDSVRxgP-X1GhrqeWhzXe-d_fYJHx2ZQSkG1CaJbbNXbTYgn6o
 
 [anawood.vn]
 match = 15.8%%
