--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-01 05:44:49
+lastsearch = 2024-08-01 06:12:38
 
 [tuananh.vn]
-match = 8.0%%
-title = Đệm bông ép 3 mảnh Korea Kaki
-url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
@@ -92,9 +92,9 @@ title = Đệm Korea Gấm Plus sự kết hợp bông Nano kháng khuẩn và .
 url = https://sieuthidemonline.vn/dem-korea-gam-plus/
 
 [www.facebook.com]
-match = 12.0%%
-title = Món Ngon Người Việt Houston
-url = https://www.facebook.com/groups/monngonnvh/posts/d41d8cd9/26300472122877435/
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
 [m.facebook.com]
 match = -48.0%%
