--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-01 05:30:09
+lastsearch = 2024-08-01 06:17:56
 
 [www.lazada.vn]
 match = -212.5%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -193.8%%
-title = Trying the Viral Covergirl Lip Stains 🎀 YES GIRL ITS ...
-url = https://www.tiktok.com/@skinstadrea/video/7346309634728299822
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
