--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-01 05:40:12
+lastsearch = 2024-08-01 06:32:39
 
 [erado.vn]
 match = 5.0%%
 title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOopCxGURsqxaVAgf1rZ7LS6jxSh7n8nnKLDMFpBLtzLYGIHh2qGA
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
 match = -105.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOor-K_o_jVgBVULukiA047LfGyxeVYUwkqCxo4r5krSDB_Ei-_Ts
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
 
 [sofaphongkhach.vn]
 match = -40.0%%
@@ -169,7 +169,7 @@ url = https://dogohiephien.vn/giuong-go-dep/
 [noithatcaco.vn]
 match = -110.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqoknLVdl5vKccqdhxvjTDVe65e9G0itb7YhQzFwNKdcYaZsbN1
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [noithatminhtan.com]
 match = 5.0%%
