--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 04:27:57
+lastsearch = 2024-08-01 06:37:43
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -405,4 +405,9 @@ url = https://www.mumsnet.com/talk/higher_education/5129402-gap-year-working-ove
 match = -258.3%%
 title = Tui | Pilot Training Flight Simulator Wiki - Fandom
 url = https://roblox-ptfs.fandom.com/wiki/Tui
+
+[mw.linkedin.com]
+match = -200.0%%
+title = TUI
+url = https://mw.linkedin.com/company/tuigroup?trk=public_profile_experience-item_result-card_subtitle-click
 
