--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-01 05:38:06
+lastsearch = 2024-08-01 06:39:43
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -250,4 +250,9 @@ url = https://ngo-quyen.org/p3590a8380/14/thainc-jennifer
 match = -42.1%%
 title = news-2022-02-28.xml
 url = https://ngoisao.vn/sitemaps/news-2022-02-28.xml
+
+[nemuytin.com]
+match = 0.0%%
+title = BỘ DRAP COTTON HÀN QUỐC MẪU SỐ 1 - Nệm Uy Tín
+url = https://nemuytin.com/product/bo-drap-cotton-han-quoc-mau-so-1/
 
