--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-01 01:46:45
+lastsearch = 2024-08-01 06:31:38
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Ống Kính Pentax Thế giới máy ảnh số
 url = https://www.thegioimayanhso.vn/ong-kinh-pentax
 
 [www.vnphoto.net]
-match = -42.9%%
-title = Topic riêng dành cho dân chơi PENTAX [Archive] - Page 30
-url = http://www.vnphoto.net/forums/archive/index.php/t-16103-p-30.html
+match = -3.6%%
+title = Nên Chọn Pentax K7 Hay K5. [Archive]
+url = http://www.vnphoto.net/forums/archive/index.php/t-179152.html
 
 [nspp.mofa.gov.tw]
 match = -46.4%%
