--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-08-01 04:46:46
+lastsearch = 2024-08-01 06:35:01
 
 [nemgiakho.com]
 match = 7.4%%
@@ -90,4 +90,9 @@ url = https://khodem.vn/dem-cao-su/
 match = 59.3%%
 title = Nệm cao su Liên Á Classic 160x200x10cm
 url = https://websosanh.vn/nem-cao-su-lien-a-classic-160x200x10cm/907296504/so-sanh.htm
+
+[www.kymdan.com]
+match = 0.0%%
+title = bảng giá sản phẩm kymdan
+url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
