--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-31 21:37:49
+lastsearch = 2024-08-01 06:31:17
 
 [everon.vip]
-match = 44.4%%
-title = Nệm Everon Ceramic
-url = https://everon.vip/nem-everon-ceramic
+match = -10.0%%
+title = NỆM EVERON
+url = https://everon.vip/nem
 
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoo7TfbRVyVcUrcVvLPskgYEpSFg7EdlPjiESDv2hi4CPh33YXsu
 
 [www.sieuthinem.vn]
 match = -95.2%%
