--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-01 04:16:47
+lastsearch = 2024-08-01 06:42:30
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 [www.diepxuan.com]
 match = 61.5%%
 title = Điệp Xuân Nệm lò xo Everon Pocket 18
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html?srsltid=AfmBOoqXdUlEfaYzXx_Q6g76qAySBY7e5FVH0v7y2F5ojF58SfzYq7o7
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
 match = -26.9%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -19.2%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOoq9aYp0LypdZUThhHpw-DOTY9F2wCnjvV8NHjm-0X2hL75OEJ6D
+match = -34.6%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
