--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-01 00:18:18
+lastsearch = 2024-08-01 06:36:20
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -308.3%%
-title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
+match = -291.7%%
+title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
@@ -495,4 +495,9 @@ url = https://www.vance.af.mil/About-Us/Biographies/Display/Article/3819572/eric
 match = -258.3%%
 title = Miss Cosmo added a new photo — at Thung Nham...
 url = https://m.facebook.com/100070582791098/photos/528788106150611/
+
+[www.seascanner.com]
+match = 8.3%%
+title = TUI Cruise Deals
+url = https://www.seascanner.com/tui-cruises
 
