--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-08-01 03:59:06
+lastsearch = 2024-08-01 06:30:15
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+match = 10.5%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooC0RyMwo1H8bryhyzGzjUOBg3u5YVlrJHrb9QiJm0YzooIlh3D
 
 [www.cloudynights.com]
 match = -75.0%%
