CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-01 05:47:15
+lastsearch = 2024-08-01 06:56:30
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/voi-mini
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVULrC_E&sig=ACfU3U1ReZn42GqdY4oISSQXY2XDYSwR5A&hl=en&sa=X&ved=2ahUKEwj8odyBrtKHAxWOHjQIHcfUDuUQ6AF6BAggEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVUMlD4y&sig=ACfU3U3hBcUSUQWGlRDo7AHHM5IaOVu2qw&hl=en&sa=X&ved=2ahUKEwibv-O-vdKHAxW_kIkEHQ-jFS4Q6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/_/?l=vietnamese&utm_source=keylol&curator_clanid=9730205
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&snr=1_1056_4_1056_curator-tabs&curator_clanid=42342144
 
 [vi.wikipedia.org]
 match = 3.8%%
