--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-01 06:25:38
+lastsearch = 2024-08-01 06:50:20
 
 [chieutrelanlan.com]
-match = -17.9%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-mau-den-loai-khong-vien-180x200cm-26.html
+match = -7.1%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = -3.6%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = 7.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -42,14 +42,14 @@ title = Chiếu Tre Lan Lan | Ho Chi Minh City
 url = https://www.facebook.com/chieutruclanlan/
 
 [tiki.vn]
-match = 34.6%%
-title = Mua Chiếu trúc hạt Quế Lâm
-url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
+match = -42.9%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
-match = -7.1%%
-title = Chiếu Trúc Hạt Quế hàng loại 1 cao cấp 1m8, 2m2 - ct004
-url = https://www.sendo.vn/chieu-truc-hat-que-hang-loai-1-cao-cap-1m8-2m2-31922415.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400323_undefined_-1_cateLvl2_0_67_23_-1
+match = -17.9%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
 
 [chieutrucsaigon.com]
 match = 32.1%%
