--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -8,8 +8,8 @@ lastsearch = 2024-08-01 06:30:55
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+title = Vỏ gối EP1812 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1812-45x65.html
 
 [www.qcyc.ca]
 match = -53.6%%
