--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-01 01:46:13
+lastsearch = 2024-08-01 06:48:36
 
 [www.tiktok.com]
-match = -8.3%%
-title = Hunter Era Passer Son Hatsu Niveau 2
-url = https://www.tiktok.com/discover/hunter-era-passer-son-hatsu-niveau-2
+match = 4.3%%
+title = Kopsialis Air Condition
+url = https://www.tiktok.com/discover/kopsialis-air-condition
 
 [www.reddit.com]
 match = -91.7%%
@@ -272,9 +272,9 @@ title = Unpaid Data
 url = https://www.sbicard.com/sbi-card-en/assets/docs/pdf/who-we-are/notices/SBI-N19-20-UNPAID-DATA.pdf
 
 [www.nrc.gov]
-match = -108.3%%
-title = 2012 Annual Radioactive Effluent Release Report Including ...
-url = https://www.nrc.gov/docs/ML1314/ML13141A477.pdf
+match = -116.7%%
+title = Rev 2 to Final Deficiency Rept DER 81-22 re premature time-out ...
+url = https://www.nrc.gov/docs/ML2007/ML20073F458.pdf
 
 [www.govinfo.gov]
 match = -29.2%%
@@ -290,4 +290,9 @@ url = https://theses.hal.science/tel-00071184v1/file/main-final.pdf
 match = -41.7%%
 title = 47553 1 111111111 1111 111111 Item Number
 url = https://interchange.puc.texas.gov/Documents/47553_32_961450.PDF
+
+[www.mycouriertribune.com]
+match = -95.8%%
+title = Can Non-Statin Cholesterol Meds Help Your Liver? | Health
+url = https://www.mycouriertribune.com/lifestyles/health/can-non-statin-cholesterol-meds-help-your-liver/article_073d4a41-f701-588c-b73e-33a5df4aeafe.html
 
