--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -150.0%%
-title = Trần Thu Trang | NEM KEM BƠ HẢI SẢN Rán nóng chiếc ...
-url = https://www.instagram.com/p/Cu9Gu5Avy4N/
+match = -138.9%%
+title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
+url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
 
 [www.facebook.com]
 match = -105.6%%
