--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -202,12 +202,22 @@ title = gucci premiere perfume notes - More - iea504.com
 url = https://iea504.com/blog/swrrgrue-205/
 
 [kuw725.com]
-match = -175.0%%
-title = malta in april - malta april temperature - kuw725.com
-url = https://kuw725.com/product/mtphzmne-234//
+match = -68.8%%
+title = ff14 除名投票 ペナルティ
+url = https://kuw725.com/blog/otdsmmds-16//
 
 [www.zmt498.com]
 match = -175.0%%
 title = tui warmdream 16 - Wings of Fire (novel series) - zmt498.com
 url = https://www.zmt498.com/shop/lrrxzabx-255/
+
+[www.iea504.com]
+match = -137.5%%
+title = mater dei hospital contact number - iea504.com
+url = https://www.iea504.com/product/njkjyjom-265/
+
+[ckd737.com]
+match = -212.5%%
+title = kemba walker 92 points - kemba walker game log - ckd737.com
+url = https://ckd737.com/product/qnxrfoyn-59/
 
