--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-01 00:28:46
+lastsearch = 2024-08-01 06:51:42
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -18.8%%
-title = Tụng 14 Giới Tiếp Hiện
-url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
+match = 0.0%%
+title = Bài 14 – Quán buông bỏ
+url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
 
 [phaata.com]
 match = -118.8%%
@@ -455,4 +455,9 @@ url = https://thaibinhseed.com.vn/vi-vn/faq/tu-van-ky-thuat/huong-dan-su-dung-gi
 match = -193.8%%
 title = Trẻ em mấy tuổi được vào rạp chiếu phim? Những thông ...
 url = https://vnpay.vn/tre-em-may-tuoi-duoc-vao-rap-chieu-phim-011x01ls5hsns
+
+[support.apple.com]
+match = -162.5%%
+title = Thiết lập và ghép đôi Apple Watch của bạn với iPhone
+url = https://support.apple.com/vi-vn/guide/watch/apdde4d6f98e/watchos
 
