--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 05:48:00
+lastsearch = 2024-08-01 06:45:27
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjN_gq17&sig=ACfU3U2a3RPiPzx91U0Y1UyXsm-vV4slZQ&hl=en&sa=X&ved=2ahUKEwiN6fuWrtKHAxW4MTQIHW80CBQQ6AF6BAgWEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmNMqkc&sig=ACfU3U144MdackEYi0BGj1AoOt5a8dBGFQ&hl=en&sa=X&ved=2ahUKEwjwpteCu9KHAxWukIkEHX5jO2QQ6AF6BAgiEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
