--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-31 21:54:30
+lastsearch = 2024-08-01 06:57:13
 
 [demtot.com]
-match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+match = 26.7%%
+title = Đệm lò xo Korea
+url = https://demtot.com/dem-lo-xo-lien-ket-korea/
 
 [tuananh.vn]
 match = 52.4%%
