CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 05:39:51
+lastsearch = 2024-08-01 08:04:28
 
 [hoa18.com]
 match = -84.2%%
@@ -97,9 +97,9 @@ title = VNeID là tài khoản duy nhất thực hiện thủ tục hành chính
 url = https://www.htv.com.vn/vneid-la-tai-khoan-duy-nhat-thuc-hien-thu-tuc-hanh-chinh-dich-vu-cong-tu-ngay-17
 
 [www.baodienbienphu.com.vn]
-match = -47.4%%
-title = Giá vàng mất mốc 67 triệu đồng/lượng
-url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
+match = -100.0%%
+title = Giá vàng giảm mạnh, mất mốc 71 triệu đồng/lượng
+url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/209883/gia-vang-giam-manh-mat-moc-71-trieu-dongluong?page=115
 
 [nongnghiep.vn]
 match = -121.1%%
