--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-01 00:30:14
+lastsearch = 2024-08-01 08:05:36
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -47,9 +47,9 @@ title = Dictionnaire Grec-Français
 url = https://books.google.com/books?id=QsJPI8ZiuzMC&pg=PA831&lpg=PA831&dq=man+re+xanh+16&source=bl&ots=VRF66Z_k5N&sig=ACfU3U2lgQXhyn8CczCbJn3q-fswXW3wYw&hl=en&sa=X&ved=2ahUKEwiy3KDIzsyHAxXnJUQIHZOyI04Q6AF6BAgWEAM
 
 [mobilecity.vn]
-match = -185.7%%
-title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
-url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
+match = -207.1%%
+title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
+url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
 match = -242.9%%
