--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-31 21:51:44
+lastsearch = 2024-08-01 08:02:47
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -160.0%%
@@ -92,9 +92,9 @@ title = Ministry of Defence acronyms and abbreviations
 url = https://assets.publishing.service.gov.uk/media/5a7ebee940f0b6230268b464/20140808_MOD_Acronyms_and_Abbreviations.pdf
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -75.0%%
+title = OIL PRICE FORECAST FOR TOMORROW, WEEK, MONTH
+url = https://30rates.com/oil-price-forecast-and-predictions
 
 [english.moe.go.kr]
 match = 0.0%%
@@ -405,4 +405,9 @@ url = https://twitter.com/bigbadbear_
 match = -30.0%%
 title = AP News Summary at 4:33 p.m. EDT
 url = https://www.hastingstribune.com/ap/health/ap-news-summary-at-4-33-p-m-edt/article_eafc99fd-024e-5a88-94f0-611efff9872a.html
+
+[www.cnn.com]
+match = -70.0%%
+title = CNN: Breaking News, Latest News and Videos
+url = https://www.cnn.com/
 
