--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-01 06:28:04
+lastsearch = 2024-08-01 09:24:05
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = Ho Chi Minh City
 url = https://en.wikipedia.org/wiki/Ho_Chi_Minh_City
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrVeeT-O&sig=ACfU3U1BF0ETm2z6vC_pEZwLV3wPfA5KYA&hl=en&sa=X&ved=2ahUKEwj04pfLw8-HAxWOl4kEHZWbEWUQ6AF6BAgmEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz2Sjg8Vy&sig=ACfU3U1rnJ7fnD37fMCUv5wdePN7T-7Qbg&hl=en&sa=X&ved=2ahUKEwih7Ju93tKHAxWQmYkEHXLMI00Q6AF6BAgmEAM
 
 [www.travelweekly.com]
 match = -87.0%%
