--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-31 23:35:32
+lastsearch = 2024-08-01 09:28:38
 
 [demxanh.com]
-match = 26.3%%
-title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+match = -60.9%%
+title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
 
 [shopee.vn]
 match = 43.5%%
@@ -32,9 +32,9 @@ title = Bang Chan vibing to cool music while his computer kinda ...
 url = https://www.youtube.com/watch?v=rezmW8IDkRk
 
 [phongkhongkhongquan.vn]
-match = -60.9%%
-title = Hiệu quả mô hình chăn nuôi bò ở Trạm Ra đa 35
-url = https://phongkhongkhongquan.vn/26553/hieu-qua-mo-hinh-chan-nuoi-bo-o-tram-ra-da-35.html
+match = -82.6%%
+title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
+url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
 
 [tamanhhospital.vn]
 match = -39.1%%
