--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-31 16:41:24
+lastsearch = 2024-08-01 09:33:28
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -42,9 +42,9 @@ title = Cách tính chu kì, tần số của Con lắc lò xo (hay, chi tiết)
 url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.jsp
 
 [olm.vn]
-match = -218.8%%
-title = 1 tạ = 100 kg Số ki lô gam lạc củ cần có để có 175 kg hạt là
-url = https://olm.vn/cau-hoi/1-ta-100-kg-so-ki-lo-gam-lac-cu-can-co-de-co-175-kg-hat-la-100-x-175-70-250-kg-dap-so-250-kg.8765367521223
+match = -187.5%%
+title = Một con lắc đơn có chiều dài l m được treo dưới gầm cầu ...
+url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-l-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-o-01.321451557569
 
 [www.vietjack.com]
 match = -193.8%%
@@ -62,9 +62,9 @@ title = Di tích lịch sử Rạch gầm - Xoài mút
 url = https://svhttdl.tiengiang.gov.vn/di-tich-lich-su/-/asset_publisher/wxIoUS9QiA4e/content/di-tich-lich-su-rach-gam-xoai-mut
 
 [www.youtube.com]
-match = -193.8%%
-title = #58.Hướng Dẫn Cách Lắp Bảng Lề Xoay | Cửa Cổng Cho Ai ...
-url = https://www.youtube.com/watch?v=JXckUMr9AoA
+match = -218.8%%
+title = "Chết rồi sẽ đi về đâu?" Thầy giải thích RẤT HAY nghe xong ...
+url = https://www.youtube.com/watch?v=0GAlh_VjR48
 
 [lienminhhtxhaiphong.org.vn]
 match = -25.0%%
