--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-01 06:20:03
+lastsearch = 2024-08-01 09:22:01
 
 [demxanh.com]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt đen 1.2x1.9m
 url = https://demre.com.vn/chieu-truc-hat-den-1-2x1-9m
 
 [shopee.vn]
-match = -70.6%%
-title = Chiếu trúc hạt đen không viền hàng bền , đẹp
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-hàng-bền-đẹp-i.270303342.8319885845
+match = -105.9%%
+title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [changagoidemdep.vn]
 match = 0.0%%
