--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-01 05:13:25
+lastsearch = 2024-08-01 09:20:20
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -27,8 +27,8 @@ title = Phu Ha - Lawrenceville, Georgia, United States
 url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = -275.0%%
-title = Welcome to GW University Hospital | Washington, DC
+match = 0.0%%
+title = 
 url = https://www.gwhospital.com/
 
 [finance.saccounty.gov]
