--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-01 05:40:33
+lastsearch = 2024-08-01 09:30:03
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
