--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 06:45:27
+lastsearch = 2024-08-01 09:24:47
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmNMqkc&sig=ACfU3U144MdackEYi0BGj1AoOt5a8dBGFQ&hl=en&sa=X&ved=2ahUKEwjwpteCu9KHAxWukIkEHX5jO2QQ6AF6BAgiEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmOMlqc&sig=ACfU3U2nv3qYTyXhOYY-WPL6qytpAgFY6g&hl=en&sa=X&ved=2ahUKEwiamvvQ3tKHAxW1rokEHVW9A4sQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOooNR-TuBvu6i4lJieXkm3ntMhJmoex9Xs2CMe3aDvzvTyAAPwvQ
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoo_OvyLOk5LkVgHwRTKvl902naYYxBW_DM1v-kmzsJT_icm1Ilu
 
 [hopkinssports.com]
 match = -100.0%%
@@ -219,7 +219,7 @@ url = https://www.thebump.com/b/ren-baby-name
 [www.entertainmentearth.com]
 match = -320.0%%
 title = Ren and Stimpy Ren 16-Inch HugMe Shake-Action Plush
-url = https://www.entertainmentearth.com/product/ren-and-stimpy-ren-16inch-hugme-shakeaction-plush/kr18163
+url = https://www.entertainmentearth.com/product/ren-and-stimpy-ren-16inch-hugme-shakeaction-plush/kr18163?srsltid=AfmBOoph1hyuT5jToYbmwixh0FrGD8ujJzsMGU9YXhbpcQ-J9ss1UzNQ
 
 [megamitensei.fandom.com]
 match = -250.0%%
