--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-01 06:36:20
+lastsearch = 2024-08-01 09:31:47
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
+match = -258.3%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
@@ -192,9 +192,9 @@ title = UFC Fight Night: Tuivasa vs Tybura
 url = https://www.ufc.com/event/ufc-fight-night-march-16-2024
 
 [www.thenaturaladventure.com]
-match = -283.3%%
-title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
+match = -325.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.youtube.com]
 match = -141.7%%
